feat: added chart data get for a symbol. (#22)
