# server/docs/swagger.yaml
@@ -69,6 +69,56 @@ info:
   title: GMarket API
   version: "1.0"
 paths:
+  /market/chart:
+    get:
+      consumes:
+      - application/json
+      description: GetChartData fetches chart data for a given symbol from an external
+        API.
+      parameters:
+      - default: NSE
+        description: Exchange (e.g., NSE)
+        in: query
+        name: exchange
+        required: true
+        type: string
+      - default: RELIANCE
+        description: Stock Symbol (e.g., RELIANCE)
+        in: query
+        name: symbol
+        required: true
+        type: string
+      - default: 1d
+        description: Chart Range (e.g., 1d, 5d, 1mo)
+        in: query
+        name: range
+        required: true
+        type: string
+      - default: 1m
+        description: Data Interval (e.g., 1m, 5m, 1h)
+        in: query
+        name: interval
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.ErrorDTO'
+      summary: Get Chart Data for a Symbol
+      tags:
+      - market
   /market/symbols:
     get:
       description: GetSymbols serves the list of market symbols from a static JSON
@@ -86,7 +136,7 @@ paths:
             $ref: '#/definitions/dtos.ErrorDTO'
       summary: Get Market Symbols
       tags:
-      - Market
+      - market
   /sessions:
     delete:
       description: Delete the current session for the authenticated user
